# LUAF

./: .gitignore  LICENSE  LUAF.py  MANIFEST.in  README.md  designer_system_prompt.txt  env.example  luaf.json  luaf_defaults.py  luaf_profiles.py  luaf_publish.py  luaf_quality.json  luaf_tui.py  luaf_x_post.py  pyproject.toml  requirements.txt  tui.css
.github/workflows/: python-publish.yml
aerospace_defense/: topic_prompt.txt
agtech/: display_name.txt  system_prompt.txt  topic_prompt.txt
asset_discovery_recon/: display_name.txt  product_focus.txt
brokerage/: product_focus.txt
brokerage copy/: topic_prompt.txt
business_b2b copy/: system_prompt.txt
creator_economy/: display_name.txt
generated_agents/: ARBF.py  CCOMP.py  LGA.py  NFTARB.py  PSAI.py  PSRA.py  QTSYS.py  RECORPO.py  RELM.py  RISQA.py  RRP.py  SHADG.py  SHOPGEN.py  SVAI.py  publish_luaf_agent.py
luaf/: __init__.py  designer.py  profiles_loader.py  x_post.py
luaf/assets/: __init__.py  designer_exemplars.jsonl  designer_rapidapi_suffix.txt  designer_system_prompt.txt  env.example  tui.css
luaf/profiles/: __init__.py  generated_keywords_Corporation_20260308_213949.txt
luaf/profiles/aerospace_defense/: display_name.txt  system_prompt.txt
luaf/profiles/agtech/: system_prompt.txt
luaf/profiles/asset_discovery_recon/: system_prompt.txt  topic_prompt.txt
luaf/profiles/brokerage copy/: system_prompt.txt
luaf/profiles/business_b2b/: display_name.txt  product_focus.txt  topic_prompt.txt
luaf/profiles/creator_economy/: system_prompt.txt
luaf/profiles/crypto/: product_focus.txt  topic_prompt.txt
luaf/profiles/crypto copy/: system_prompt.txt
luaf/profiles/data_analysis/: product_focus.txt  system_prompt.txt
luaf/profiles/data_products/: display_name.txt  product_focus.txt  system_prompt.txt  topic_prompt.txt
luaf/profiles/devtools_platform/: display_name.txt  system_prompt.txt
luaf/profiles/edtech_backend/: system_prompt.txt
luaf/publishing/: __init__.py  dispatch.py  model.py  rapid.py
out_exemplars/: exemplars.index.jsonl  exemplars.meta.json  exemplars.npz
profiles/: generated_keywords_Maximum_easy_profit_20260308_213653.txt  generated_keywords_Maximum_low_effor_profit_20260308_213205.txt
profiles/aerospace_defense/: product_focus.txt  system_prompt.txt
profiles/agtech/: product_focus.txt
profiles/asset_discovery_recon/: system_prompt.txt
profiles/creator_economy/: product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/crypto copy/: display_name.txt
profiles/data_analysis/: topic_prompt.txt
profiles/data_products/: system_prompt.txt
profiles/devtools_platform/: product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/edtech_backend/: display_name.txt  product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/energy_cleantech/: product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/fintech_payments/: display_name.txt  product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/generic_profit/: display_name.txt  topic_prompt.txt
profiles/gov_contracting/: display_name.txt  product_focus.txt  system_prompt.txt
profiles/healthcare_backend/: display_name.txt  product_focus.txt  system_prompt.txt
profiles/hedge_fund/: product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/infosec_blue_team/: display_name.txt  system_prompt.txt
profiles/law_firm/: system_prompt.txt
profiles/legal_contract_automation/: system_prompt.txt  topic_prompt.txt
profiles/logistics_supply_chain/: system_prompt.txt
profiles/max_passive_income_solana/: display_name.txt  topic_prompt.txt
profiles/media_entertainment/: product_focus.txt  system_prompt.txt
profiles/military/: product_focus.txt
profiles/quant_research/: display_name.txt  product_focus.txt  system_prompt.txt  topic_prompt.txt
profiles/real_estate_proptech/: product_focus.txt  system_prompt.txt
profiles/red_team_offensive/: display_name.txt  system_prompt.txt  topic_prompt.txt
profiles/saas_backend/: product_focus.txt  system_prompt.txt
profiles/sovereign_infrastructure/: system_prompt.txt  topic_prompt.txt
profiles/vulnerability_research/: display_name.txt  system_prompt.txt
profiles/x402_ai_payments/: product_focus.txt  system_prompt.txt  topic_prompt.txt
tests/: __init__.py  test_rapid_bundle.py
(+49 files in other folders)
